--- a/app.html
+++ b/app.html
@@ -12,5 +12,13 @@
 
   <h5>mencoba git remote yang ke 2</h5>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente!</p>
+
+  <ul>
+    <li>satu</li>
+    <li>dua</li>
+    <li>tiga</li>
+    <li>empat</li>
+    <li>lima</li>
+  </ul>
 </body>
 </html>
